--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,11 +2,14 @@
 header {
     position: sticky;
     top: 0;
-    margin: var(--default);
     background: var(--site-white);
     z-index: 100000;
 }
-
+@media (min-width: 1024px){
+    header{
+        margin: var(--default);
+    }
+}
 .header-content {
     display: flex;
     flex-wrap: wrap;
@@ -26,13 +29,50 @@ header {
 .header-content nav {
     flex: 1 0 auto;
     width: 100%;
+    position: relative;
 }
 
 .header-content .header-logo {
     display: flex;
     justify-content: center;
 }
-
+.header-menu-icon{
+    position: absolute;
+    top: 50%;
+    right: calc(1 * var(--miniscule));
+    transform: translateY(-50%);
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    z-index: 12000;
+}
+.header-menu-icon .menu-icon{
+    width: 35px;
+    height: 4px;
+    background: var(--site-dark-blue);
+    margin: calc(var(--miniscule) * 0.8) 0;
+    opacity: var(--opacity-full);
+    transform: rotate(0deg) translateY(0);
+    transform-origin: center;
+    transition: var(--transition-medium) ease;
+}
+.header-menu-icon.active-menu-icon .menu-icon{
+    background: var(--site-red);
+}
+.header-menu-icon.active-menu-icon .menu-icon:nth-child(1){
+    transform: rotate(45deg) translateY(15px);
+}
+.header-menu-icon.active-menu-icon .menu-icon:nth-child(2){
+    opacity: var(--opacity-none);
+}
+.header-menu-icon.active-menu-icon .menu-icon:nth-child(3){
+    transform: rotate(-45deg) translateY(-15px);
+}
+@media (min-width: 1024px){
+    .header-menu-icon{
+        display: none !important;
+    }
+}
 .header-content nav {
     display: grid;
     place-items: center;
@@ -40,8 +80,28 @@ header {
 
 @media (max-width: 1023px) {
     .header-content nav {
-        max-height: 0;
-        overflow: hidden;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: var(--site-white);
+        transform: translateX(-100%);
+        visibility: hidden;
+        opacity: var(--opacity-none);
+        display: grid;
+        place-items: center;
+        z-index: 10000;
+        transition: var(--transition-slow) ease;
+    }
+    .header-content nav.active-nav-menu{
+        transform: translateX(0);
+        visibility: visible;
+        opacity: var(--opacity-full);
+    }
+    .header-content nav ul{
+        margin: 0 auto;
+        max-width: var(--max-width-100);
     }
 }
 
@@ -56,7 +116,7 @@ header {
     margin: var(--miniscule);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
     .header-content .header-logo {
         max-width: 30%;
     }
@@ -71,11 +131,16 @@ header {
 }
 
 .header-logo #logo span {
+    user-select: none;
     font-weight: 600;
-    font-size: calc(var(--default) * 2);
+    font-size: calc(var(--default) * 1.2);
     text-transform: uppercase;
 }
-
+@media (min-width: 400px){
+    .header-logo #logo span{
+        font-size: calc(var(--default) * 2);
+    }
+}
 .header-logo #logo span:nth-child(1) {
     color: var(--site-red);
 }
@@ -83,7 +148,6 @@ header {
 .header-logo #logo span:nth-child(2) {
     color: var(--site-dark-blue);
 }
-
 .header-content li a {
     user-select: none;
     padding: var(--miniscule) var(--medium);
@@ -123,13 +187,13 @@ header {
 .breadcrumb a::after {
     content: "";
     position: absolute;
-    top: -2px;
-    right: -15px;
+    top: -3px;
+    right: -20px;
     width: 40px;
     height: 40px;
     border-left: 10px solid var(--site-dark-blue);
     border-bottom: 10px solid var(--site-dark-blue);
-    transform: rotate(-135deg) scale(0.25);
+    transform: rotate(-135deg) scale(0.2);
 }
 .breadcrumb a:last-child:after{
     content: unset;
